# wtheme

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ping.yml  release.yml
src/: apply.rs  cli.rs  main.rs  mode.rs
src/platform/: broadcast.rs  mod.rs  registry.rs
